RESOLVED FIXED176206
Graph::methodOfGettingAValueProfileFor compares NodeOrigin instead of the semantic CodeOrigin
https://bugs.webkit.org/show_bug.cgi?id=176206
Summary Graph::methodOfGettingAValueProfileFor compares NodeOrigin instead of the sem...
Saam Barati
Reported 2017-08-31 18:31:56 PDT
This is a followup to: https://bugs.webkit.org/show_bug.cgi?id=164600 That patch says we should only write to the result bits of the ArithProfile of the operand when it's not generated from the same byte code as the current node. However, it's comparing NodeOrigin, not NodeOrigin::semantic.
Attachments
patch (3.71 KB, patch)
2017-08-31 18:48 PDT, Saam Barati
no flags
Saam Barati
Comment 1 2017-08-31 18:48:35 PDT
Keith Miller
Comment 2 2017-08-31 18:50:21 PDT
Comment on attachment 319562 [details] patch r=me.
WebKit Commit Bot
Comment 3 2017-08-31 20:05:42 PDT
Comment on attachment 319562 [details] patch Clearing flags on attachment: 319562 Committed r221470: <http://trac.webkit.org/changeset/221470>
WebKit Commit Bot
Comment 4 2017-08-31 20:05:44 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2017-09-27 12:48:15 PDT
Note You need to log in before you can comment on or make changes to this bug.